# osus-proxy

./: .gitignore  Cargo.toml  README.md  server.crt  server.key
.github/workflows/: build.yml
src/: main.rs  preferences.rs
src/osus_proxy/: bancho.rs  mod.rs
src/ui/: mod.rs
src/updater/: mod.rs
